samples/_failures_safe/1761524954_1e1a57_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_510ed621.c: In function ‘main’:
./samples/SAFE/__tmp_510ed621.c:162:5: error: expected expression at end of input
  162 |     if (len > 0 && input_buffer[len -
      |     ^~
./samples/SAFE/__tmp_510ed621.c:162:5: error: expected declaration or statement at end of input
